--- a/day03_eesy_01datasourceAndTx/pom.xml
+++ b/day03_eesy_01datasourceAndTx/pom.xml
@@ -13,7 +13,7 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.4.5</version>
+            <version>3.5.7</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -25,6 +25,13 @@
             <artifactId>log4j</artifactId>
             <version>1.2.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
