--- a/day04_eesy_03annotation_mybatis/pom.xml
+++ b/day04_eesy_03annotation_mybatis/pom.xml
@@ -30,7 +30,12 @@
             <artifactId>junit</artifactId>
             <version>4.10</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
