--- a/day04_eesy_04annoOne2Many/pom.xml
+++ b/day04_eesy_04annoOne2Many/pom.xml
@@ -30,6 +30,13 @@
             <artifactId>junit</artifactId>
             <version>4.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <scope>provided</scope>
+        </dependency>
+
 
     </dependencies>
 
