--- a/day03_eesy_03one2many/pom.xml
+++ b/day03_eesy_03one2many/pom.xml
@@ -9,34 +9,49 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <!--版本定义-->
+    <properties>
+        <mybatis-version>3.5.10</mybatis-version>
+        <mysql-version>8.0.29</mysql-version>
+        <log4j-version>1.2.17</log4j-version>
+        <lombok-version>1.18.24</lombok-version>
+        <junit-version>4.10</junit-version>
+        <jboss-vfs-version>3.2.17.Final</jboss-vfs-version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.5.7</version>
+            <version>${mybatis-version}</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.12</version>
+            <version>${mysql-version}</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.12</version>
+            <version>${log4j-version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.10</version>
+            <version>${junit-version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.20</version>
+            <version>${lombok-version}</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.jboss</groupId>
+            <artifactId>jboss-vfs</artifactId>
+            <version>${jboss-vfs-version}</version>
+        </dependency>
     </dependencies>
 
 
