--- a/day02_eesy_01mybatisCRUD/src/main/resources/jdbcConfig.properties
+++ b/day02_eesy_01mybatisCRUD/src/main/resources/jdbcConfig.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/eesy?serverTimezone=Asia/Shanghai&useSSL=false
+jdbc.url=jdbc:mysql://localhost:3306/eesy?serverTimezone=Asia/Shanghai&useSSL=false&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=123456
