--- a/day04_eesy_03annotation_mybatis/pom.xml
+++ b/day04_eesy_03annotation_mybatis/pom.xml
@@ -11,9 +11,9 @@
 
     <!--版本定义-->
     <properties>
-        <mybatis-version>3.5.13</mybatis-version>
+        <mybatis-version>3.5.15</mybatis-version>
         <mysql-version>8.0.33</mysql-version>
-        <log4j-version>1.2.17</log4j-version>
+        <slf4j.version>2.0.12</slf4j.version>
         <lombok-version>1.18.30</lombok-version>
         <junit-version>4.13.2</junit-version>
         <jboss-vfs-version>3.2.17.Final</jboss-vfs-version>
@@ -31,9 +31,9 @@
             <version>${mysql-version}</version>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>${log4j-version}</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
